--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,17 @@
   color: #b7b7b7;
   font-size: 16px;
 }
+
+.we_be{
+  display: flex;
+  text-align: center;
+  /* vertical-align: middle; */
+  justify-content: center;
+  margin: 220px 0px;
+}
+.we_h3_text{
+font-size: 1.2rem;
+}
 @media screen and (max-device-width: 480px) and (orientation: portrait){
   .left_text{
   margin-right: 200px !important;
@@ -96,6 +107,9 @@
     font-size: 17px;
     margin: 0px 15px 0px 15px;
   }
+  .we_be{
+    margin: 100px 0px;
+  }
 }
 .CircularProgressbar {
   background-color: white;
@@ -108,10 +122,3 @@
     font-size: 20px;
 }
 
-.we_be{
-    display: flex;
-    text-align: center;
-    /* vertical-align: middle; */
-    justify-content: center;
-    margin: 220px 0px;
-}
