--- a/src/App.css
+++ b/src/App.css
@@ -37,88 +37,213 @@
   }
 }
 .site_wrapper {
-  display: flex;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left top;
-  background-attachment: fixed;
-  background-image: url("./images/hintergrund.png");
-  min-height: 740px;
-  display: block;
+  max-width: 850px;
+  min-height: 500px;
+  margin: auto;
+  flex: 1 1 0%;
+  font-family: Inter !important;
+  border: 4px solid rgb(149, 175, 178);
 }
-.wrraper_header{
+.wrraper_header {
   text-align: center;
-  
 }
-.form_header{
+.form_header {
   font-weight: bold;
   padding: 80px 0px 0px 0px;
 }
 
-.value_class{
-  
+.value_class {
   font-size: 20px;
-  font-weight : 600;
+  font-weight: 400;
 }
 
-.input_range_text{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.input_range_text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.left_text{
-  margin-right: 345px;
-  color: #b7b7b7;
-  font-size: 16px;
-  top:17px
+.left_text {
+  margin-right: 285px;
 }
-.right_text{
-  color: #b7b7b7;
-  font-size: 16px;
+.right_text {
 }
 
-.we_be{
+.we_be {
   display: flex;
   text-align: center;
   /* vertical-align: middle; */
   justify-content: center;
   margin: 220px 0px;
 }
-.we_h3_text{
-font-size: 1.2rem;
+.we_h3_text {
+  font-size: 1.2rem;
 }
-@media screen and (max-device-width: 480px) and (orientation: portrait){
-  .left_text{
-  margin-right: 200px !important;
+@media screen and (max-device-width: 480px) and (orientation: portrait) {
+  .left_text {
+    margin-right: 200px !important;
   }
-  .site_wrapper{
-    background-image: none;
-    background-color: #eeeeeb;
+  .site_wrapper {
+    max-width: 850px;
+    min-height: 500px;
+    margin: auto;
+    flex: 1 1 0%;
+    border: none;
+    overflow-y: hidden;
   }
-  .form_header{
+  .form_header {
     font-size: 23px;
     /* width: 335px; */
     /* margin-left: 5px; */
     display: inline-block;
     margin: 0 5px 0 5px;
   }
-  .text_form{
+  .text_form {
     font-size: 17px;
     margin: 0px 15px 0px 15px;
   }
-  .we_be{
+  .we_be {
     margin: 100px 0px;
   }
 }
+
 .CircularProgressbar {
   background-color: white;
   border-radius: 85px;
 }
-.header_animation{
-    margin-bottom: 40px;
-    text-align: center;
-    margin-top: 70px;
-    font-size: 20px;
+.header_animation {
+  margin-bottom: 40px;
+  text-align: center;
+  margin-top: 70px;
+  font-size: 20px;
 }
 
+.text_input_parent {
+  margin-top: 50px;
+  height: 45px;
+  position: relative;
+}
+.input_text_slider {
+  border: 1px solid rgb(188, 188, 188);
+  font-size: 16px;
+  padding: 12px 16px;
+  height: 100%;
+  width: 100%;
+}
+.unit_input {
+  color: rgb(170, 170, 170);
+  font-size: 14px;
+  position: absolute;
+  right: 16px;
+  top: 125%;
+  transform: translateY(-50%);
+}
+.slider_label_parent {
+  text-align: left;
+}
+
+.slider_label_text {
+  font-size: 15px;
+  color: #000000;
+}
+
+.btn-danger {
+  margin-left: 415px;
+  margin-top: -70px;
+  width: 208px;
+  background-color: #fad705;
+  color: #024b54;
+  border: none;
+  font-weight: 600;
+}
+
+.btn-danger:hover {
+  color: #024b54;
+  background-color: #fad705 !important;
+}
+
+.btn-primary:active:focus {
+  color: #024b54;
+  background-color: #fad705 !important;
+  box-shadow: none;
+}
+.btn-success {
+  background-color: #fad705;
+  color: #024b54;
+  font-weight: 600;
+  border: none;
+}
+.btn-success:hover {
+  color: #024b54;
+  background-color: #fad705 !important;
+}
+.btn-success:active:focus {
+  color: #024b54;
+  background-color: #fad705 !important;
+  box-shadow: none;
+}
+.img_slider_sasas {
+  margin-bottom: 45px;
+}
+.map_slider {
+  -webkit-box-align: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
+  position: relative;
+  margin-left: 100px;
+}
+.map_img {
+  display: block;
+  max-height: 220px;
+  max-width: 250px;
+}
+.pin_img {
+  left: 12%;
+  max-height: 20%;
+  max-width: 20%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.input_map {
+  display: grid;
+  margin-left: 185px;
+  max-width: 100px;
+}
+.label_map {
+  text-align: left;
+}
+.map_text {
+  text-align: left;
+  font-size: 13px;
+  color: rgb(85, 85, 85);
+}
+.input_field_map {
+  padding: 5px 5px 5px 5px;
+}
+.btn_container_mobile {
+  display: none;
+}
+.btn_container_slider_mobile_slider {
+  display: none;
+}
+
+@media screen and (max-device-width: 480px) and (orientation: portrait) {
+  .btn_container_mobile {
+    display: grid;
+
+    margin-left: 5%;
+  }
+  .btn_container {
+    display: none !important;
+  }
+  .btn_container_slider_mobile_slider {
+    display: block;
+    box-shadow: rgb(0 0 0 / 16%) 5px 5px 20px;
+    height: 350px;
+
+    margin-left: 35px;
+    margin-right: 35px;
+  }
+}
