--- a/src/components/progress-bar/progressbar.css
+++ b/src/components/progress-bar/progressbar.css
@@ -1,26 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 .progress {
-	background-color: white;
-	border-radius: 20px;
-	position: relative;
-	margin: 5px 0;
-	height: 30px;
-	width: 300px;
+  background-color: white;
+  border-radius: 20px;
+  position: relative;
+  margin: 5px 0;
+  height: 30px;
+  width: 300px;
 }
 
 .progress-done {
-	background: linear-gradient(to left, #577B0A, #577B0A);
-	box-shadow: 0 3px 3px -5px #577B0A, 0 2px 5px #577B0A;
-	border-radius: 0px;
-	color: #fff;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	width: 0;
-	opacity: 0;
-	transition: 0.5s ease 0.2s;
+  background: linear-gradient(to left, #577b0a, #577b0a);
+  box-shadow: 0 3px 3px -5px #577b0a, 0 2px 5px #577b0a;
+  border-radius: 0px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 0;
+  opacity: 0;
+  transition: 0.5s ease 0.2s;
 }
